--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Tech task for Ciklum University: JS Band Internship",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel src -d dist --presets es2015",
+    "watch": "babel src -d dist --presets es2015 -w"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mrvershynin/TODOlist.git"
   },
+  "presets": ["airbnb"],
   "keywords": [],
   "author": "",
   "license": "ISC",
